@@ -8,6 +8,7 @@ depends:
     stock
 extras_depend:
     account_invoice_secondary_unit
+    sale_amendment
     sale_blanket_agreement
     sale_opportunity
     sale_product_customer
