@@ -1,3 +1,4 @@
+* Add secondary unit to sale amendment
 
 Version 7.2.0 - 2024-04-29
 --------------------------
